--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,13 @@
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/spatie-laravel-settings-plugin": "^3.2",
+        "gboquizosanchez/filament-log-viewer": "^1.2",
         "hasnayeen/themes": "*",
         "jeffgreco13/filament-breezy": "^2.4",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "marcelweidum/filament-expiration-notice": "^1.0",
         "owenvoke/blade-fontawesome": "^2.8",
         "pxlrbt/filament-excel": "^2.3",
         "resend/resend-laravel": "^0.16.1",
